--- a/crates/math/Cargo.toml
+++ b/crates/math/Cargo.toml
@@ -1,8 +1,4 @@
 [package]
-name = "math"
+name = "hex_math"
 version = "0.0.1"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
