--- a/.github/workflows/nix-build.yml
+++ b/.github/workflows/nix-build.yml
@@ -1,15 +1,16 @@
-name: "Build from flake.nix"
+name: "Build From Flake"
 on:
   pull_request:
   push:
 jobs:
-  tests:
+  build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - uses: cachix/install-nix-action@v22
       with:
         github_access_token: ${{ secrets.GITHUB_TOKEN }}
-    - run: nix flake check
+    - name: "Check flake"
+      run: nix flake check
     - name: "Build devShell"
       run: nix build .#devShells.x86_64-linux.default
