--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "hexen"
 description = "A demo engine in Rust"
-version = "0.0.1"
+version = "0.0.1-nightly"
 authors = [ "Zeno <zacheryklinglesmith@gmail.com" ]
 repository = "https://github.com/Zeno343/hexen.git"
 license = "MIT"
