--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('flake.lock') }}
 
     - name: "Install Nix"
+      if: steps.cache.outputs.cache-hit != 'true'
       uses: nixbuild/nix-quick-install-action@v26
 
     - name: "Build CI dependencies"
