Run smart-release from devShell

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       run: nix build .#ci
 
     - name: "Test cargo smart-release"
-      run: cargo smart-release
+      run: nix develop --comand cargo smart-release
