Remove smart-release step temporarily

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,8 @@ jobs:
       id: cache
       uses: nix-community/cache-nix-action@v3
       with:
-        key: cache-${{ runner.os }}-${{ hashFiles('flake.lok') }}
+        key: cache-${{ runner.os }}-${{ hashFiles('flake.lock') }}
 
     - name: "Build CI dependencies"
       if: steps.cache.outputs.cache-hit != 'true'
       run: nix build .#ci
-
-    - name: "Test cargo smart-release"
-      run: nix develop --command cargo smart-release
