Try smart-release again

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,3 +19,6 @@ jobs:
     - name: "Build CI dependencies"
       if: steps.cache.outputs.cache-hit != 'true'
       run: nix build .#ci
+
+    -name: "Test smart-release"
+     run: nix develop .#ci --command cargo smart-release
