Try fix for smart-release action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       run: nix build .#ci
 
     - name: "Test smart-release"
-      run: nix develop .#ci --command cargo smart-release
+      run: nix develop .#ci --command cargo smart-release --update-crates-index
