--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,5 +25,5 @@ jobs:
     - name: "Test cargo-smart-release install"
       run: |
         git config user.name "zeno"
-        git.config user.email "zacheryklinglesmith@gmail.com"
+        git config user.email "zacheryklinglesmith@gmail.com"
         nix develop .#ci --command cargo smart-release --update-crates-index
