--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,12 @@ repository = "https://github.com/Zeno343/hexen.git"
 license = "MIT"
 
 [dependencies]
-hex_win = { path = "crates/win", version = "^0.0.1" }
+hex_io = { path = "crates/io", version = "^0.0.1" }
 hex_gfx = { path = "crates/gfx", version = "^0.0.1" }
 hex_math = { path = "crates/math", version = "^0.0.1" }
 
 [workspace]
-members = [ "crates/math", "crates/gfx", "crates/win" ]
+members = [ "crates/math", "crates/gfx", "crates/io" ]
 resolver = "2"
 
 [features]
