--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,14 @@ jobs:
       with:
         key: cache-${{ runner.os }}-${{ hashFiles('flake.lock') }}
         restore-keys: |
-          cache-${{ runner.os }}-${{ hashFiles('flake.lock') }}
-          cache-${{ runner.os }}-*
+          cache-${{ runner.os }}-
 
-    - name: "Build CI dependencies"
+    - name: "Build dev dependencies"
       if: steps.cache.outputs.cache-hit != 'true'
-      run: nix build .#ci
+      run: nix build .#dev
 
     - name: "Test cargo-smart-release install"
       run: |
-        git config user.name "zeno"
+        git config user.name "Zeno343"
         git config user.email "zacheryklinglesmith@gmail.com"
-        nix develop .#ci --command cargo smart-release --update-crates-index
+        nix develop .#dev --command cargo smart-release --update-crates-index
