--- a/crates/io/Cargo.toml
+++ b/crates/io/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "hex_io"
 version = "0.0.1"
-description = "Window library for hexen"
-authors = [ "Zeno <zacheryklinglesmith@gmail.com" ]
-repository = "https://github.com/Zeno343/hexen.git"
+description = "Window and input library for hexn"
+authors = [ "Zeno343 <zacheryklinglesmith@gmail.com" ]
+repository = "https://github.com/Zeno343/hexn.git"
 license = "MIT"
 
 [build-dependencies]
